Fix overspill at end of day. Add focus toggle to nullTime click

--- a/main.css
+++ b/main.css
@@ -1076,12 +1076,36 @@ label {  /* Used in settingsView */
   position: relative;
 } */
 
+#hourglass {
+  display: none;
+}
 
-#dummyAdd {
+#hourglass.active {
+  display: block;
+}
+
+#soundDiv {
+  display: none;
+}
+
+#soundDiv.active {
+  display: block;
+}
+
+.addView.playView {
+  display: none;
+}
+
+.addView.playView.active {
+  display: block;
+}
+
+
+/* #dummyAdd {
   background-color: rgba(154, 219, 240, .25);
   width: 100%;
   height: 200px;
-}
+} */
 
 
 #heart {
